--- a/The Front End/How does the Web work/index.html
+++ b/The Front End/How does the Web work/index.html
@@ -39,6 +39,13 @@
 
     <!-- Intro  -->
     <section id="intro">
+      <img
+        class="im"
+        src="images/pexels-markus-spiske-1089438.jpg"
+        alt="Web"
+        width="520"
+        height="330"
+      />
       <p class="text">
         Based on Tobin James, The World Wide Web (WWW), known as the Web, is an
         information system where documents and other web resources are
@@ -92,7 +99,7 @@
 
       <p class="text">
         Protocols? Packets? What are these? Before we jump on this terms, let's
-        watch <a href="https://vimeo.com/128575085"> this video</a> on how the
+        watch <a href="https://vimeo.com/128575085" style="color: rgb(179, 129, 22);"> this video</a> on how the
         internet works.
       </p>
     </section>
@@ -131,7 +138,7 @@
       </p>
 
       <p class="text">
-        <a
+        <a style="color: rgb(179, 129, 22);"
           href="https://support.holmsecurity.com/hc/en-us/articles/212963869-What-is-the-difference-between-TPC-and-UDP-"
           >TCP and UDP</a
         >
@@ -161,7 +168,7 @@
       </p>
       <p class="text">
         Are you curious about your IP? Find it in this
-        <a href="https://www.whatismyip.com/">Domain server</a>, which is
+        <a style="color: rgb(179, 129, 22);" href="https://www.whatismyip.com/">Domain server</a>, which is
         something like an address book.
       </p>
     </section>
