--- a/Fundamentals 2/strings2-download.html
+++ b/Fundamentals 2/strings2-download.html
@@ -28,6 +28,10 @@
   <script>
     let quote = 'I do not like green eggs and ham. I do not like them, Sam-I-Am.';
     let substring = 'green eggs and ham';
+    let quoteLength = quote.length;
+    let index = quote.indexOf('green eggs and ham');
+    let revisedQuote = quote.slice(0, 33);
+    console.log(revisedQuote);
 
     // Add your code here
 
