--- a/Fundamentals 2/strings3-download.html
+++ b/Fundamentals 2/strings3-download.html
@@ -27,8 +27,9 @@
   </body>
   <script>
     let quote = 'I dO nOT lIke gREen eGgS anD HAM';
-
-    // Add your code here
+    let fixedQuote = quote.toLowerCase()
+    let me = fixedQuote.replace("green eggs and ham", "spinach");
+    let finalQuote = fixedQuote + "."
 
     // Don't edit the code below here!
 
