--- a/Fundamentals 2/strings4-download.html
+++ b/Fundamentals 2/strings4-download.html
@@ -30,8 +30,11 @@
 
     let a = 5;
     let b = 8;
+    let calculation = (8**2) + (5**2);
+    let c = Math.sqrt(calculation);
+  
 
-    let myString = 'Using *, we can work out that that if the two shortest sides of a right-angled triangle have lengths of * and *, the length of the hypotenuse is *.';
+    let myString = `Using ${theorem}, we can work out that that if the two shortest sides of a right-angled triangle have lengths of "${a}" and "${b}", the length of the hypotenuse is "${c}".`;
 
 
     // Don't edit the code below here!
