--- a/task-Google-Project-HTMLCSS/index.html
+++ b/task-Google-Project-HTMLCSS/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <p class="up">Gmail Images <img class="grid" src="https://cdn3.iconfinder.com/data/icons/navigation-and-settings/24/Material_icons-01-11-512.png" title="Google apps"></a>
-                           <img src="https://lh3.googleusercontent.com/ogw/ADGmqu_firxa5cPEYdrWEJfTl_z8Y-DxpC_nWUO_D-R32A=s32-c-mo" title="google account"></p>
+                           <img class="account" src="https://lh3.googleusercontent.com/ogw/ADGmqu_firxa5cPEYdrWEJfTl_z8Y-DxpC_nWUO_D-R32A=s32-c-mo" title="google account"></p>
 
 <form action="https://www.google.com/search" method="GET">
 <div>
@@ -23,7 +23,7 @@
 
 <div id="click">
     <input class="searchbar" type="button" value="Google Search">
-    <input type="button" value="I'm Feeling Lucky">
+    <input class="searchbar" type="button" value="I'm Feeling Lucky">
 </div>
 <p class="go">Google offered in: <a href="https://www.google.com/">Ελληνικά</a></p>
 
